[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/ui/icons/stats/move.png" type="Texture" id=1]
[ext_resource path="res://src/ui/ActorDetailsPanel.gd" type="Script" id=2]
[ext_resource path="res://resources/visual/gui/theme_standard.tres" type="Theme" id=3]
[ext_resource path="res://assets/graphics/ui/icons/stats/attack.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/icons/stats/defence.png" type="Texture" id=5]

[node name="ActorDetailsPanel" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 87.0
margin_bottom = -68.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 109.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="Container"]
margin_right = 81.0
margin_bottom = 30.0

[node name="PortraitContainer" type="PanelContainer" parent="Container/Header"]
margin_right = 30.0
margin_bottom = 30.0

[node name="Portrait" type="TextureRect" parent="Container/Header/PortraitContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 24, 24 )

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Header"]
margin_left = 32.0
margin_right = 81.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Container/Header/VBoxContainer"]
margin_right = 49.0
margin_bottom = 7.0
text = "Test"

[node name="StaminaLabels" type="HBoxContainer" parent="Container/Header/VBoxContainer"]
margin_top = 9.0
margin_right = 49.0
margin_bottom = 17.0

[node name="StaminaIcon" type="TextureRect" parent="Container/Header/VBoxContainer/StaminaLabels"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 5 )

[node name="StaminaLabel" type="Label" parent="Container/Header/VBoxContainer/StaminaLabels"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 7.0
text = "Stamina:"

[node name="StaminaValues" type="HBoxContainer" parent="Container/Header/VBoxContainer"]
margin_left = 25.0
margin_top = 19.0
margin_right = 49.0
margin_bottom = 26.0
size_flags_horizontal = 8

[node name="CurrentStamina" type="Label" parent="Container/Header/VBoxContainer/StaminaValues"]
margin_right = 8.0
margin_bottom = 7.0
text = "10"

[node name="Slash" type="Label" parent="Container/Header/VBoxContainer/StaminaValues"]
margin_left = 10.0
margin_right = 14.0
margin_bottom = 7.0
text = "/"

[node name="MaxStamina" type="Label" parent="Container/Header/VBoxContainer/StaminaValues"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 7.0
text = "10"

[node name="Stats" type="GridContainer" parent="Container"]
margin_top = 32.0
margin_right = 81.0
margin_bottom = 52.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackIcon" type="TextureRect" parent="Container/Stats"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="AttackLabel" type="Label" parent="Container/Stats"]
margin_left = 12.0
margin_right = 36.0
margin_bottom = 7.0
text = "Attack:"

[node name="AttackValue" type="Label" parent="Container/Stats"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 7.0
text = "10"

[node name="AttackMod" type="Label" parent="Container/Stats"]
margin_left = 52.0
margin_right = 70.0
margin_bottom = 7.0
text = "(+10)"

[node name="MoveIcon" type="TextureRect" parent="Container/Stats"]
margin_top = 12.0
margin_right = 8.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="MoveLabel" type="Label" parent="Container/Stats"]
margin_left = 12.0
margin_top = 12.0
margin_right = 36.0
margin_bottom = 19.0
text = "Move:"

[node name="MoveValue" type="Label" parent="Container/Stats"]
margin_left = 40.0
margin_top = 12.0
margin_right = 48.0
margin_bottom = 19.0
text = "10"

[node name="MoveMod" type="Label" parent="Container/Stats"]
margin_left = 52.0
margin_top = 12.0
margin_right = 70.0
margin_bottom = 19.0
text = "(-10)"

[node name="ConditionsHeader" type="Label" parent="Container"]
margin_top = 54.0
margin_right = 81.0
margin_bottom = 61.0
text = "Conditions"

[node name="ConditionsScroll" type="ScrollContainer" parent="Container"]
margin_top = 63.0
margin_right = 81.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConditionsList" type="VBoxContainer" parent="Container/ConditionsScroll"]
margin_right = 81.0
size_flags_horizontal = 3
